src/styles/blog.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap');

.font-raleway {
  font-family: 'Raleway', serif;
}

.blog-body a {
  @apply text-red-700 underline;
}

.blog-body a:hover {
  @apply text-red-900;
}

.blog-body p {
  @apply mb-4;
}

pre {
  @apply bg-gray-100 rounded p-3 my-3 font-mono shadow-inner;
}

